<resources>
    <string name="app_name">TravelAndEntertainmentSearch</string>
    <string name="app_title">Places Search</string>
    <string name="search_keyword">Keyword</string>
    <string name="search_enter_keyword">Enter keyword</string>
    <string name="search_category">Category</string>
    <string name="search_distance">Distance(in miles)</string>
    <string name="search_enter_distance">Enter distance (default 10 miles)</string>
    <string name="search_from">From</string>
    <string name="search_current_location">Current Location</string>
    <string name="search_other_location">Other. Specify Location</string>
    <string name="search_enter_other_location">Type in the Location</string>
    <string name="search_search_button">Search</string>
    <string name="search_clear_button">Clear</string>

    <string name="list_previous_button">PREVIOUS</string>
    <string name="list_next_button">NEXT</string>
    <string name="list_title">Search results</string>

    <string name="search_error">Please enter mandatory field</string>

    <string-array name="travel_mode">
        <item>Driving</item>
        <item>Bicycling</item>
        <item>Transit</item>
        <item>Walking</item>
    </string-array>

    <string-array name="review_type">
        <item>Google reviews</item>
        <item>Yelp reviews</item>
    </string-array>

    <string-array name="review_order">
        <item>Default order</item>
        <item>Highest rating</item>
        <item>Lowest rating</item>
        <item>Most recent</item>
        <item>Least recent</item>
    </string-array>

    <string-array name="category">
        <item>Default</item>
        <item>Airport</item>
        <item>Amusement Park</item>
        <item>Aquarium</item>
        <item>Art Gallery</item>
        <item>Bakery</item>
        <item>Bar</item>
        <item>Beauty Salon</item>
        <item>Bowling Alley</item>
        <item>Bus Station</item>
        <item>Cafe</item>
        <item>Campground</item>
        <item>Car Rental</item>
        <item>Casino</item>
        <item>Lodging</item>
        <item>Movie Theater</item>
        <item>Museum</item>
        <item>Night Club</item>
        <item>Park</item>
        <item>Parking</item>
        <item>Restaurant</item>
        <item>Shopping Mall</item>
        <item>Stadium</item>
        <item>Subway Station</item>
        <item>Taxi Stand</item>
        <item>Transit Station</item>
        <item>Travel Agency</item>
        <item>Zoo</item>
    </string-array>

    <string-array name="category_value">
        <item>default</item>
        <item>airport</item>
        <item>amusement_park</item>
        <item>aquarium</item>
        <item>art_gallery</item>
        <item>bakery</item>
        <item>bar</item>
        <item>beauty_salon</item>
        <item>bowling_alley</item>
        <item>bus_station</item>
        <item>cafe</item>
        <item>campground</item>
        <item>car_rental</item>
        <item>casino</item>
        <item>lodging</item>
        <item>movie_theater</item>
        <item>museum</item>
        <item>night_club</item>
        <item>park</item>
        <item>parking</item>
        <item>restaurant</item>
        <item>shopping_mall</item>
        <item>stadium</item>
        <item>subway_station</item>
        <item>taxi_stand</item>
        <item>transit_station</item>
        <item>travel_agency</item>
        <item>zoo</item>
    </string-array>

</resources>
