<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/search_layout_margin"
        android:orientation="vertical"
        >


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_keyword" />

        <TextView
            android:id="@+id/key_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:visibility="gone"
            android:text="@string/search_error" />


        <EditText
            android:id="@+id/keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_enter_keyword"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_category"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/category"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_distance"/>

        <EditText
            android:id="@+id/distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/search_enter_distance"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_from"/>

        <RadioButton
            android:id="@+id/currentRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_current_location" />

        <RadioButton
            android:id="@+id/otherRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_other_location" />

        <TextView
            android:id="@+id/other_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:visibility="gone"
            android:text="@string/search_error" />

        <!--<EditText-->
            <!--android:id="@+id/other"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:hint="@string/search_enter_other_location"-->
            <!--/>-->
        <AutoCompleteTextView
            android:id="@+id/other"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/search_enter_other_location" />


        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/search_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/search_search_button"/>

            <Button
                android:id="@+id/clear_button"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/search_clear_button"/>


        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
